--- a/src/main/webapp/WEB-INF/templates/admin/scratch/episode.html
+++ b/src/main/webapp/WEB-INF/templates/admin/scratch/episode.html
@@ -25,7 +25,7 @@
 				</tr>
 				<tr>
 					<th>
-						<button class="ui green button">一键推送</button>
+						<a class="ui green button" th:href="@{/admin/scratch/episode/push}">推送</a>
 					</th>
 				</tr>
 				<tr>
