--- a/src/main/webapp/WEB-INF/templates/user/info.html
+++ b/src/main/webapp/WEB-INF/templates/user/info.html
@@ -15,14 +15,25 @@
 				<div class="item">
 					<label>用户账号：</label> <span th:text="${user.username}"></span>
 				</div>
-				<div class="item">
-					<label>邮箱地址：</label> <span th:text="${user.email}"></span> 
-					<a
-						th:if="${!'1'.equals(user.status)}" th:href="@{/user/register/sendMail}">(认证邮箱)</a>
-					<a th:unless="${!'1'.equals(user.status)}">(已认证)</a>
-				</div>
 			</div>
 		</div>
+
+		<form class="ui form" th:action="@{/user/update/email}" method="post">
+			<div class="field">
+				<label>邮箱
+					<span th:if="${!'1'.equals(user.status)}">
+						（未认证，点击
+						<a th:href="@{/user/register/sendMail}">认证邮箱</a>
+						）
+					</span>
+				</label>
+				<input type="email" name="email" th:value="${user.email}"/>
+			</div>
+			<div class="actions">
+				<input type="submit"  class="ui grey button" value="确定"/>
+			</div>
+		</form>
+
 		<div class="ui grey segment">
 			<div class="ui accordion">
 				<div class="title">
