--- a/src/main/webapp/WEB-INF/templates/admin/scratch/temp.html
+++ b/src/main/webapp/WEB-INF/templates/admin/scratch/temp.html
@@ -2,6 +2,7 @@
 <html xmlns:th="www.themeleaf.org">
 
 <head>
+	<title>数据审核</title>
 	<th:block th:remove="all">
 		<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.js"></script>
 		<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.cookie.js"></script>
