--- a/src/main/webapp/WEB-INF/templates/admin/scratch/episode.html
+++ b/src/main/webapp/WEB-INF/templates/admin/scratch/episode.html
@@ -3,8 +3,9 @@
 <head>
 	<title>剧集管理</title>
 	<th:block th:replace="base/lib :: common"></th:block>
+	<th:block th:replace="base/lib :: react"></th:block>
 	<th:block th:replace="base/lib :: semantic"></th:block>
-	<script type="text/javascript" th:src="@{/js/react-common.js}"></script>
+	<script type="text/babel" th:src="@{/js/semanticbundle.js}"></script>
 </head>
 
 <body th:replace="base/layout/admin :: layout(~{::#container})">
@@ -53,55 +54,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<table class="ui celled padded teal table">
-			<colgroup>
-				<col style="width: 20%">
-				<col style="width: 10%">
-				<col style="width: 20%">
-				<col style="width: 15%">
-				<col style="width: 15%">
-				<col style="width: 20%">
-			</colgroup>
-			<thead>
-				<tr>
-					<th colspan="1">所有剧集</th>
-				</tr>
-				<tr>
-					<td><a class="ui blue button" 
-						th:data-href="@{/admin/scratch/episode/save}">新增</a></td>
-				</tr>
-				<tr>
-					<th>名称</th>
-					<th>集号</th>
-					<th>链接</th>
-					<th>更新时间</th>
-					<th>最近推送时间</th>
-					<th>操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="episode : ${episodes}">
-					<td th:text="${episode.anime.name}"></td>
-					<td th:text="${episode.number}"></td>
-					<td>
-						<a th:href="${episode.url}" 
-								th:text="${#strings.length(episode.url) > 50 ? 
-									#strings.substring(episode.url,0,50) + '...' : 
-									episode.url}"></a>
-					</td>
-					<td
-						th:text="${#dates.format(episode.saveTime, 'yyyy-MM-dd HH:mm')}"></td>
-					<td></td>
-					<td>
-						<a class="ui green button" 
-							th:data-href="@{/admin/scratch/episode/modify/{id}(id=${episode.id})}">编辑</a> 
-						<a class="ui red button"
-							th:href="@{/admin/scratch/episode/delete/{id}(id=${episode.id})}">删除</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<div class="ui modal"></div>
+		<div id="episodes-box"></div>
 	</div>
 </body>
 </html>
