--- a/src/main/webapp/WEB-INF/templates/base/alert.html
+++ b/src/main/webapp/WEB-INF/templates/base/alert.html
@@ -1,25 +1,29 @@
 <html xmlns:th="www.thymeleaf.org">
 <!-- 存在错误信息时  -->
-<th:block th:if="${message != null or error != null or success != null}">
+<th:block>
 	<!-- DOM -->
 	<div class="fix-nag">
 		<div class="ui inline cookie nag left">
+			<label class="title"></label>
 			<label class="title" th:text="${error}" th:if="${error != null}"></label>
 			<label class="title" th:text="${success}" th:if="${success != null}"></label>
 			<label class="title" th:text="${message}" th:if="${message != null}"></label>
 		</div>
 	</div>
 	<!-- 调用提示 -->
-	<script type="text/javascript">
-		$('body').click(function () {
-			$('.cookie.nag').nag('dismiss');
-			// 需要解绑事件
-		});
-		$('.cookie.nag')
-		  .nag({
-		    key      : 'c-cookies',
-		    value    : true
-		  })
-		; 
+	<script type="text/javascript" th:inline="javascript">
+        if($(".cookie.nag").length > 0) {
+            var mess = /*[[${error}]]*/;
+            if(mess != null) {
+                message(mess, 'error');
+                /*console.debug($(".cookie.nag").find("label"));
+				$label = $($(".cookie.nag").find("label").get(0));
+				$label.text(mess);
+				$('.cookie.nag').nag('show');
+				$('body').click(function () {
+					$('.cookie.nag').nag('hide');
+				});*/
+            }
+        }
 	</script>
 </th:block>
