--- a/src/main/webapp/WEB-INF/templates/base/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout/admin.html
@@ -1,14 +1,11 @@
 <html xmlns:th="www.thymeleaf.org">
 <body th:fragment="layout(content)">
 	<div class="display-table">
-		<div>
-			<div th:replace="~{base/header}"></div>
-		</div>
-		<div class="wrapper toggled">
-			<div class="sidebar">
+		<div id="context">
+			<div class="ui left fixed vertical inverted pointing menu">
 				<div th:replace="~{base/nav_admin}"></div>
 			</div>
-			<div class="main">
+			<div id="admin-content">
 				<div th:replace="${content}"></div>
 			</div>
 		</div>
