--- a/src/main/webapp/WEB-INF/resource/css/common.css
+++ b/src/main/webapp/WEB-INF/resource/css/common.css
@@ -1,250 +1,18 @@
-.five-margin {
-    margin:5px;
+body {
+    overflow-y: scroll;
+    font-family:Micrsoft Yahei, Arial;
+    font-size: 18px;
 }
 
-#home-container {
-
-}
-
-body { overflow-y: scroll; }
-
-
-.topbar {
-	background: #2A3F54;
-	border-color: #2A3F54;
-	border-radius: 0px;
-}
-
-.topbar .navbar-header a {
-	color: #ffffff;
-}
-
-.wrapper {
-    padding-left: 0px;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.sidebar {
-    z-index: 1000;
-    position: fixed;
-    top: 50px;
-    left: -50px;
-    width: 50px;
-    height: 100%;
-    overflow-y: auto;
-    background: #ffffff;
-	color: #000000;
-	-webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-
-.wrapper.toggled {
-	padding-left: 50px;
-	/*padding-top:50px;*/
-}
-
-.wrapper.toggled .sidebar {
-	left: 0;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 52px;
-    width: 50px;
-    margin: 0;
-    padding: 0;
+li,ul{
     list-style: none;
-    
-    border-top: 2px solid #2a2e43;
-}
-.sidebar-nav li {
-    line-height: 40px;
-}
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #e8e8e8;
-    padding: 10px;
-    text-align:center;
-    font-size:16px;
+    padding: 0;
+    margin: 0;
 }
 
-.sidebar-nav li a:hover, .sidebar-nav li.active a {
-    text-decoration: none;
-    color: #fff;
-    background: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav li span, .subbar li span {
-	display : none;
-}
-
-nav.subbar {
-	position: relative;
-	width: 100%;
-	border-radius: 0px;
-	background: #fff;
-	margin: 50px 0 -50px 0;
-	padding: 10px 0 0 0;
-	z-index: 2;
-}
-nav.subbar > ul.nav.nav-tabs {
-	padding: 0 5px;
-}
-
-nav.subbar > ul.nav.nav-tabs > li.active > a {
-    background: #dedede;
-    border-top: 1px solid #a6a6a6;
-    border-left: 1px solid #a6a6a6;
-    border-right: 1px solid #a6a6a6;
-    border-radius: 0px;
-}
-
-
-@media(min-width:768px){
-	.subbar li span {
-		display: inline;
-	}
-}
-
-@media(min-width:992px) {
-    .wrapper {
-    	padding-left: 50px;
-    }
-
-    .sidebar {
-    	left: 0;
-    	width: 50px;
-	}
-
-	.wrapper.toggled {
-		padding-left: 175px;
-	}
-
-	.wrapper.toggled .sidebar, .wrapper.toggled .sidebar-nav {
-		width: 175px;
-	}
-	
-	.wrapper.toggled .sidebar-nav li a {
-		text-align: left;
-		padding: 0 0 0 10px;
-	}
-
-	.wrapper.toggled .sidebar-nav li span {
-		display: inline;
-	}
-
-}
-
-.navbar-btn {
-    background: none;
-    border: none;
-    height: 35px;
-    min-width: 35px;
-    color: #fff;
-}
-.navbar-text {
-  margin-top: 14px;
-  margin-bottom: 14px;
-}
-@media (min-width: 768px) {
-  .navbar-text {
-    float: left;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-}
-
-
-.sidebar-nav .glyphicon {
-	margin:0 10px 0 0;
-}
-
-.sidebar-caret {
-	padding:10px 0;
-	line-height: 30px;
-	font-family: Microsoft Yahei;
-}
-
-.sidebar-caret a {
-	color: #ccc;
-	font-size:14px;
-}
-
-.sidebar-caret a:hover {
-	color: #fff;
-}
-
-/*from:http://bootsnipp.com/snippets/featured/hover-blue-button-bar*/
-#nav-button .btn-sm{
-  position: relative;
-  vertical-align: center;
-  margin: 0px;
-  height: 100x;
-  padding: 20px 20px;
-  font-size: 4px;
-  color: white;
-  text-align: center;
-  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
-  background: #62b1d0;
-  border: 0;
-  border-bottom: 3px solid #9FE8EF;
-  cursor: pointer;
-  -webkit-box-shadow: inset 0 -3px #9FE8EF;
-  box-shadow: inset 0 -3px #9FE8EF;
-}
-
-#nav-button .btn-sm:active {
-  top: 2px;
-  outline: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-#nav-button .btn-sm:hover {
-  background: #45E1E8;
-}
-
-
-/*TAG*/
-.tag a {
-	cursor: pointer;
-	/*border: 1px solid #f9f9f9;*/
-    background: #3498db;
-    border-radius: 20px;
-    color:white;
-    padding: 2px 25px;
-}
-
-/*template.jsp*/
-.content-box {
-}
-
-
-.anime-focus-filter {
-	margin:0 30px 30px 30px;
-	background: #f8f8f8;
-}
-
-.anime-focus-filter a{
-	font-size: 16px;
-}
-
-.anime-focus-filter .choose {
-	font-weight: bold;
+input[readonly=readonly] {
+    border-style:none;
+    margin:2px 2px;
 }
 
 .anime-focus .video-img {
@@ -262,9 +30,29 @@ nav.subbar > ul.nav.nav-tabs > li.active > a {
     margin : 1rem 10rem 0 10rem;
 }
 
+.portrait {
+    margin : 5px;
+}
+
+/**/
 .alert {
     position: fixed;
     right: 45%;
     top: 35%;
     opacity : 0.8;
+}
+
+
+#nav-header {
+    border-radius:0px;
+    height: 4rem;
+    font-size:1rem;
+}
+
+#user-content {
+    padding: 35px 0 0 0;
+}
+
+.grey {
+    background : #ccc;
 }
