--- a/src/main/webapp/WEB-INF/resource/css/mycss.css
+++ b/src/main/webapp/WEB-INF/resource/css/mycss.css
@@ -1,8 +1,4 @@
-/*common*/
-body{
-	font-family:Micrsoft Yahei, Arial;
-	font-size: 18px;
-}
+
 
 .display{
 	display:block;
@@ -12,21 +8,11 @@ body{
 	display:none;
 }
 
-li,ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
 
 .col-md-* {
 	margin: 0;
 }
 
-input[readonly=readonly] {
-	border-style:none;
-	margin:2px 2px;
-}
 
 /*content container*/
 /* .content{
@@ -62,7 +48,7 @@ input[readonly=readonly] {
 }
 
 .tag-new div {
-	margin 15px;
+	margin:15px;
 }
 
 .tag-new .input-tag-new {
@@ -143,14 +129,6 @@ span.error {
 .navi .glyphicon {
 	color: #337ab7;
 	margin:0 10px 0 0;
-}
-.display-table {
-	display: table;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
-.display-table-row {
 }
 .v-align {
     vertical-align: top;
