--- a/src/main/webapp/WEB-INF/templates/base/lib.html
+++ b/src/main/webapp/WEB-INF/templates/base/lib.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-
 <th:block th:fragment="react">
 	<script type="text/javascript" th:src="@{/js/tools/browser.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/tools/react.js}"></script>
@@ -11,7 +10,7 @@
 <th:block th:fragment="semantic">
 	<script type="text/javascript" th:src="@{/semantic/semantic.js}"></script>
 	<script type="text/javascript" th:src="@{/js/semantic-custom.js}"></script>
-	<link rel="stylesheet" th:href="@{/semantic/semantic.css}" ></link>
+	<link rel="stylesheet" th:href="@{/semantic/semantic.css}" />
 </th:block>
 
 <th:block th:fragment="common">
@@ -19,9 +18,9 @@
 	<script type="text/javascript" th:src="@{/js/tools/jquery.js}"></script>
 	<script type="text/javascript" th:src="@{/js/validate.js}"></script>
 	<script type="text/javascript" th:src="@{/js/tool.js}"></script>
-	<link rel="stylesheet" th:href="@{/css/common.css}"></link>
-	<link rel="stylesheet" th:href="@{/css/mycss.css}"></link>
-	<link rel="stylesheet" th:href="@{/css/admin.css}"></link>
+	<link rel="stylesheet" th:href="@{/css/common.css}" />
+	<link rel="stylesheet" th:href="@{/css/mycss.css}" />
+	<link rel="stylesheet" th:href="@{/css/admin.css}" />
 
 	<meta th:name="${_csrf.headerName}" th:content="${_csrf.token}">
 	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
