--- a/src/main/webapp/WEB-INF/templates/base/layout/user.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout/user.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Insert title here</title>
-</head>
-
 <body th:fragment="layout(content)">
-	
-	<div class="row">
-		<div th:replace="~{base/header}"></div>
-	</div>
-	
-	<div class="row" style="padding: 35px 0 0 0;">
-		<div class="col-md-1">
-			<!-- <div th:replace="nav :: nav"></div> -->
-		</div>
-		<div class="col-md-10 content-box">
-			<div th:replace="${content}"></div>
-		</div>
-	</div>
-	<th:block th:replace="~{base/alert}"></th:block>
-</body>
 
+    <div th:replace="~{base/header}"></div>
+
+    <div id="user-content">
+        <div th:replace="${content}"></div>
+    </div>
+
+    <th:block th:replace="~{base/alert}"></th:block>
+
+</body>
 </html>
