--- a/server/src/main/webapp/WEB-INF/templates/admin/dic/index.html
+++ b/server/src/main/webapp/WEB-INF/templates/admin/dic/index.html
@@ -15,7 +15,7 @@
 <body th:replace="base/layout/admin :: layout(~{::#container})">
     <div id="container">
         <div id="dic-select">
-            <div class="ui loader"></div>
+            <div class="ui active centered loader"></div>
         </div>
         <div id="dic-box">
 
