--- a/server/src/main/webapp/WEB-INF/templates/admin/anime/upload.html
+++ b/server/src/main/webapp/WEB-INF/templates/admin/anime/upload.html
@@ -1,13 +1,18 @@
 <html xmlns:th="www.thymeleaf.org">
 
 
+<script type="text/javascript" th:src="@{/js/validate.js}"></script>
+
 <div class="header">图片上传</div>
 <div class="scrolling content">
     <div class="ui text container">
         <form class="ui form" th:action="@{/admin/anime/upload}" id="editAnimeForm"
               method="post" enctype="multipart/form-data">
-            <input type="hidden" name="animeId" th:value="${animeId }" />
-            <input type="file" name="picFile">
+            <input type="hidden" name="animeId" th:value="${anime.id }" />
+            <img style="max-height:100px" th:src="@{'/upload/' + ${anime.pic}}">
+            <div class="field">
+                <input type="file" name="picFile">
+            </div>
             <div class="actions">
                 <button class="ui green button">保存</button>
                 <a class="ui cancel button">取消</a>
@@ -17,6 +22,10 @@
 </div>
 <script>
     $(".actions button").bind("click", function (event) {
+
+        $("#editAnimeForm").form("validate form");
+        if(!$("#editAnimeForm").form("is valid")) return;
+
         event.preventDefault();
 
         var file = $("#editAnimeForm input[name='picFile']").get(0).files[0];
@@ -36,8 +45,10 @@
             contentType : false,
             success : function () {
                 $(".ui.modal").modal("hide");
+                message("上传成功");
             },
             error : function() {
+                message("上传失败");
             }
         });
         event.preventDefault();
