--- a/server/src/main/webapp/WEB-INF/templates/user/register.html
+++ b/server/src/main/webapp/WEB-INF/templates/user/register.html
@@ -4,6 +4,8 @@
 	<title>新用户注册</title>
 	<th:block th:replace="~{base/lib :: common}"></th:block>
 	<th:block th:replace="~{base/lib :: semantic}"></th:block>
+	<th:block th:replace="~{base/lib :: customer}"></th:block>
+	<script type="text/javascript" th:src="@{/js/semantic-custom.js}"></script>
 	<script type="text/javascript" th:src="@{/js/validate.js}"></script>
 </head>
 
